searchPlaces, createPlan, region추출